Bug 1336710 - Add blacklist from using ANGLE for particular Intel GFX under Windows XP. r=pchang a=gchang